# telegram-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish-pypi.yml  registry-publish.yml
docs/superpowers/plans/: 2026-04-01-telegram-mcp.md
src/telegram_mcp/: __init__.py  _registry.py  cache.py  client.py  daemon.py  login.py  security.py  server.py
tests/: conftest.py  test_cache.py  test_client_mark_read.py  test_client_topics.py  test_daemon.py  test_security.py  test_server.py
