[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-mcp"
version = "0.1.0"
description = "Telegram MCP server — give AI tools direct access to your Telegram account"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Jean Galea" }]
keywords = ["telegram", "mcp", "model-context-protocol", "ai", "telethon"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon>=1.36",
    "mcp>=1.0",
    "click>=8.0",
    "cryptg>=0.4",
]

[project.urls]
Homepage = "https://github.com/jgalea/telegram-mcp"
Repository = "https://github.com/jgalea/telegram-mcp"

[project.scripts]
telegram-mcp = "telegram_mcp.server:main_cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.11"]

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
